traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:21: error: value Nors is not a member of object plm.universe.Direction
   if(getDirection() == Direction.Nors){
                                  ^